<resources>
    <string name="app_name">WiFi Helsinki</string>
    <string name="title_activity_maps">WiFi Helsinki</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_settings">MAIN SETTINGS</string>
    <string name="log_in_with_google">Log In with Google</string>
    <string name="UnitOfLength">Unit of length</string>
    <string name="metric">Metric</string>
    <string name="disableAds">Disable ads</string>
    <string name="getPremium">Get premium</string>
    <string name="datacontroller">Data Controller and Owner</string>
    <string name="typesofdata">Types of Data collected</string>
    <string name="typesofdatatext">Among the types of Personal Data that this Application collects, by itself or through third parties, there are: Geographic position, Cookies and Usage Data. \n Other Personal Data collected may be described in other sections of this privacy policy or by dedicated explanation text contextually with the Data collection. The Personal Data may be freely provided by the User, or collected automatically when using this Application. Any use of Cookies - or of other tracking tools - by this Application or by the owners of third party services used by this Application, unless stated otherwise, serves to identify Users and remember their preferences, for the sole purpose of providing the service required by the User. Failure to provide certain Personal Data may make it impossible for this Application to provide its services.\n Users are responsible for any Personal Data of third parties obtained, published or shared through this Application and confirm that they have the third party\'s consent to provide the Data to the Owner.</string>
    <string name="methods">Methods of processing</string>
    <string name="methodstext">The Data Controller processes the Data of Users in a proper manner and shall take appropriate security measures to prevent unauthorized access, disclosure, modification, or unauthorized destruction of the Data. The Data processing is carried out using computers and/or IT enabled tools, following organizational procedures and modes strictly related to the purposes indicated. In addition to the Data Controller, in some cases, the Data may be accessible to certain types of persons in charge, involved with the operation of the site (administration, sales, marketing, legal, system administration) or external parties (such as third party technical service providers, mail carriers, hosting providers, IT companies, communications agencies) appointed, if necessary, as Data Processors by the Owner. The updated list of these parties may be requested from the Data Controller at any time.</string>
    <string name="place">Place</string>
    <string name="placetext">The Data is processed at the Data Controller\'s operating offices and in any other places where the parties involved with the processing are located. For further information, please contact the Data Controller.</string>
    <string name="retention">Retention time</string>
    <string name="retentiontext">The Data is kept for the time necessary to provide the service requested by the User, or stated by the purposes outlined in this document, and the User can always request that the Data Controller suspend or remove the data.</string>
    <string name="collecteddatatext"><![CDATA[The Data concerning the User is collected to allow the Owner to provide its services, as well as for the following purposes: • foo<br/>Location-based interaction • bar<br/> Advertising The Personal Data used for each purpose is outlined in the specific sections of this document.]]></string>
    <string name="collecteddata">The use of the collected Data</string>
    <string name="personaldatainfos">Detailed information on the processing of Personal Data</string>
    <string name="personaldatatext">Personal Data is collected for the following purposes and using the following services:</string>
    <string name="location">Location-based interactions</string>
    <string name="locationtext">This Application may collect, use, and share User location Data in order to provide location-based services. Most browsers and devices provide tools to opt out from this feature by default.\n If explicit authorization has been provided, the User’s location data may be tracked by this Application. The geographic location of the User is determined in a manner that isn\'t continuous, either at the specific request of the User or when the User doesn\'t point out their current location in the appropriate field and allows the application to detect the position automatically.</string>
    <string name="ad">Advertising</string>
    <string name="adtext">These services allow User Data to be utilized for advertising communication purposes displayed in the form of banners and other advertisements on this Application, possibly based on User interests. \nThis does not mean that all Personal Data are used for this purpose. Information and conditions of use are shown below. Some of the services listed below may use Cookies to identify Users or they may use the behavioral retargeting technique, i.e. displaying ads tailored to the User’s interests and behavior, including those detected outside this Application. For more information, please check the privacy policies of the relevant services.</string>
    <string name="secondtitle">Additional information about Data collection and processing</string>
    <string name="legal">Legal action</string>
    <string name="legaltext">The User\'s Personal Data may be used for legal purposes by the Data Controller, in Court or in the stages leading to possible legal action arising from improper use of this Application or the related services.\n The User declares to be aware that the Data Controller may be required to reveal personal data upon request of public authorities.</string>
    <string name="additionaldata">Additional information about User\'s Personal Data</string>
    <string name="additionaldatatext">In addition to the information contained in this privacy policy, this Application may provide the User with additional and contextual information concerning particular services or the collection and processing of Personal Data upon request.</string>
    <string name="systemlogs">System Logs and Maintenance</string>
    <string name="systemlogstext">For operation and maintenance purposes, this Application and any third party services may collect files that record interaction with this Application (System Logs) or use for this purpose other Personal Data (such as IP Address).</string>
    <string name="notcontained">Information not contained in this policy</string>
    <string name="notcontainedtext">More details concerning the collection or processing of Personal Data may be requested from the Data Controller at any time. Please see the contact information at the beginning of this document.</string>
    <string name="rights">The rights of Users</string>
    <string name="rightstext">Users have the right, at any time, to know whether their Personal Data has been stored and can consult the Data Controller to learn about their contents and origin, to verify their accuracy or to ask for them to be supplemented, cancelled, updated or corrected, or for their transformation into anonymous format or to block any data held in violation of the law, as well as to oppose their treatment for any and all legitimate reasons. Requests should be sent to the Data Controller at the contact information set out above.\nThis Application does not support “Do Not Track” requests. To determine whether any of the third party services it uses honor the “Do Not Track” requests, please read their privacy policies.</string>
    <string name="changes">Changes to this privacy policy</string>
    <string name="changestext">The Data Controller reserves the right to make changes to this privacy policy at any time by giving notice to its Users on this page. It is strongly recommended to check this page often, referring to the date of the last modification listed at the bottom. If a User objects to any of the changes to the Policy, the User must cease using this Application and can request that the Data Controller removes the Personal Data. Unless stated otherwise, the then-current privacy policy applies to all Personal Data the Data Controller has about Users.</string>
    <string name="thirdtitle">Definitions and legal references</string>
    <string name="personaldata">Personal Data (or Data)</string>
    <string name="personaldatatext2">Any information regarding a natural person, a legal person, an institution or an association, which is, or can be, identified, even indirectly, by reference to any other information, including a personal identification number.</string>
    <string name="usage">Usage Data</string>
    <string name="usagetext">Information collected automatically from this Application (or third party services employed in this Application), which can include: the IP addresses or domain names of the computers utilized by the Users who use this Application, the URI addresses (Uniform Resource Identifier), the time of the request, the method utilized to submit the request to the server, the size of the file received in response, the numerical code indicating the status of the server\'s answer (successful outcome, error, etc.), the country of origin, the features of the browser and the operating system utilized by the User, the various time details per visit (e.g., the time spent on each page within the Application) and the details about the path followed within the Application with special reference to the sequence of pages visited, and other parameters about the device operating system and/or the User\'s IT environment.</string>
    <string name="user">User</string>
    <string name="usertext">The individual using this Application, which must coincide with or be authorized by the Data Subject, to whom the Personal Data refers.</string>
    <string name="subject">Data Subject</string>
    <string name="subjecttext">The legal or natural person to whom the Personal Data refers.</string>
    <string name="processor">Data Processor (or Data Supervisor)</string>
    <string name="processortext">The natural person, legal person, public administration or any other body, association or organization authorized by the Data Controller to process the Personal Data in compliance with this privacy policy.</string>
    <string name="controller">Data Controller (or Owner)</string>
    <string name="abouttext">The Free Wifi app was developed by six future-oriented guys in 2015. The Team was founded during the “Application development project” at Helsinki Metropolia University of applied sciences. As we experience problems connecting to the internet without mobile data by ourselves, we wanted to help people with the same problem. That was the fundamental idea of this app.</string>
    <string name="contact">Contact</string>
    <string name="contact_text">Kevin Marczyk\nkevinmarczyk@gmail.com\nGroningen downtown\nNL</string>
    <string name="team">Team</string>
    <string name="names">Stig Thilmanigga\nNicolas Roillet\nFerdinand Truhart\nKevin Marczyk\nKenta Miyachi</string>
    <string name="supervisors">Supervisors</string>
    <string name="supervisorname">Nina Hellmann\nMerja Bauters\nPetri Vesikivi\nPauli Laine</string>
    <string name="thanks">Special thanks to HRI Helsinki for providing the open data set.</string>
</resources>