<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#3d3c3e"
    android:orientation="vertical"
    android:textColor="#000000">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:singleLine="false"
        android:text="About us"
        android:textColor="#ffffff"
        android:textSize="16dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4e4d4e"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="300dp">

                <TextView
                    android:id="@+id/first_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="@string/abouttext"
                    android:textColor="#ffffff"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/second_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/first_text"
                    android:paddingLeft="15dp"
                    android:paddingTop="3dp"
                    android:text="@string/contact"
                    android:textColor="#ffffff"
                    android:textSize="12dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/third_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/second_text"
                    android:paddingTop="3dp"
                    android:text="@string/contact_text"
                    android:textColor="#ffffff"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/fourth_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/third_text"
                    android:paddingLeft="15dp"
                    android:paddingTop="3dp"
                    android:text="@string/team"
                    android:textColor="#ffffff"
                    android:textSize="12dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/five_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fourth_text"
                    android:paddingTop="3dp"
                    android:text="@string/names"
                    android:textColor="#ffffff"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/six_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/five_text"
                    android:paddingLeft="15dp"
                    android:paddingTop="3dp"
                    android:text="@string/supervisors"
                    android:textColor="#ffffff"
                    android:textSize="12dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/seven_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/six_text"
                    android:paddingTop="3dp"
                    android:text="@string/supervisorname"
                    android:textColor="#ffffff"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/ei_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/seven_text"
                    android:paddingTop="3dp"
                    android:text="@string/thanks"
                    android:textColor="#ffffff"
                    android:textSize="10dp" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>